--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import com.sun.org.apache.xalan.internal.xsltc.cmdline.Compile
+
 group 'javaEE'
 version '1.0-SNAPSHOT'
 
@@ -12,4 +14,5 @@ repositories {
 
 dependencies {
     compile 'javax:javaee-api:7.0'
+    compile 'mysql:mysql-connector-java:5.1.42'
 }
